# opf

./: .gitignore  MAINTENANCE.md  README.md  debug_n1.py  overnight_results.txt  pyproject.toml  pyrightconfig.json  verify_datasets_compatibility.py
.github/: copilot-instructions.md
Week2/: Week2.ipynb
Week3/: Week3.ipynb
Week4/: ac_opf_create.py  case_to_col.py  helpers_ac_opf.py  ppc_to_g_b.py  test.py  test2.py  vm_va_to_e_f.py
Week5/: Week5.md
Week6/: Week6.md
Week7to8/: Week7to8.md
app/: experiment_dashboard.py  run_dashboard.py
configs/: config.yaml
dnn_opf_02/: Baseline_Implementation_Plan.md  evaluate_02.py
dnn_opf_03/: README.md  config_03.py  config_03_128n.py  count_params_03.py  dataset_03.py  evaluate_03.py  model_03.py  train_03.py
docs/: EXPERIMENT_GUIDE.md  PHASE_C_SWEEP.md  REFACTOR_SUMMARY.md  TRAINING_SPEED_ANALYSIS.md
gcnn_opf_01/: A_Physics-Guided_Graph_Convolution_Neural_Network_for_Optimal_Power_Flow.md  Model-Informed Feature Construction (III-C) — Copilot-Ready Guide.md  apply_highlights.py  config_01_256n_8c.py  config_01_512n_6c.py  config_01_512n_8c.py  config_model_01.py  convert_mat_to_npz.py  count_params_01.py  create_topo_viz.py  dataset.py  evaluate.py  feature_construction_model_01.py  formulas_model_01.md  gcnn_opf_01.md  generate_dataset.py  generate_unseen_dataset.py  lossfunction.md  model_01.py  process_model_01.py  sample_config_model_01.py  sample_gen_guide_model_01.md  sample_generator_model_01.py  topo_vary_sample_config_model_01.py  train.py  tune_batch_size.py  verify_case39_data.py  (+1 more)
scripts/: train.py  (+8 more)
(+453 files in other folders)
