[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep_opf"
version = "0.1.0"
description = "Research library for GCNN-based Optimal Power Flow"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "pytorch-lightning",  # We will use this for the trainer
    "hydra-core",         # We will use this for configs
    "numpy",
    "matplotlib",
    "tqdm",
    "pyomo",
    "gurobipy",
    "pandas",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "black",      # Code formatter
    "pytest",     # Testing framework
    "streamlit",  # Web dashboard for experiment management
]